[gd_scene load_steps=41 format=3 uid="uid://c835dpghcbrun"]

[ext_resource type="AudioStream" uid="uid://dudy73cxuvlnr" path="res://Audio/sfx/GUI/Achievement.ogg" id="3"]
[ext_resource type="Theme" uid="uid://der0x8rw3vflt" path="res://themes/Blue.tres" id="3_m7phy"]
[ext_resource type="Texture2D" uid="uid://ck48ufykh8f2m" path="res://textures/GUI/GlobalGUI/Ach_GUI_back.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c8lgbb3h1m83y" path="res://textures/GUI/main/GUI_Ach.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dakls7ojejoqb" path="res://textures/GUI/GlobalGUI/Ach_GUI_front.png" id="7"]
[ext_resource type="Script" path="res://scripts/GUI/GlobalGUI.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://32jxo6v3nuu1" path="res://textures/GUI/space/star_icon_K-type.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cy2kr64p5herf" path="res://textures/GUI/space/h_bar_handle.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dqkgujgjvgj5g" path="res://textures/GUI/space/v_bar.png" id="15"]
[ext_resource type="Texture2D" uid="uid://45o7v1dsk3yx" path="res://textures/GUI/space/h_bar.png" id="16"]
[ext_resource type="Texture2D" uid="uid://cn76yxyfhxg3v" path="res://textures/GUI/space/v_bar_handle.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cs2ptrjg2ll5k" path="res://textures/GUI/space/v_bar_handle_hover.png" id="18"]
[ext_resource type="Texture2D" uid="uid://cgfxdpw0sxxxi" path="res://textures/GUI/space/h_bar_handle_hover.png" id="19"]
[ext_resource type="Texture2D" uid="uid://im3ftx86mtc3" path="res://textures/GUI/space/h_bar_handle_select.png" id="20"]
[ext_resource type="PackedScene" uid="uid://blmr203fe65nk" path="res://assets/GUI/AchievementIcon.tscn" id="20_7t6a1"]
[ext_resource type="Texture2D" uid="uid://cg77ke3bvhhcj" path="res://textures/GUI/space/v_bar_handle_select.png" id="21"]
[ext_resource type="Texture2D" uid="uid://docmqdn1y13fp" path="res://textures/GUI/Blank.png" id="22"]
[ext_resource type="Texture2D" uid="uid://408gg2awh54e" path="res://textures/GUI/GlobalGUI/Ach_Desc.png" id="23"]
[ext_resource type="Texture2D" uid="uid://yv2k1paokuxx" path="res://textures/GUI/main/autosave.png" id="26_hyk7n"]
[ext_resource type="Theme" uid="uid://b02uwgbscq35l" path="res://themes/menu.tres" id="27_sm2y7"]
[ext_resource type="Script" path="res://scripts/GUI/tutorial_popup.gd" id="28_r5hjh"]

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("5")
texture_margin_left = 18.0
texture_margin_top = 2.0
texture_margin_right = 1.0
texture_margin_bottom = 4.0
region_rect = Rect2(160, 0, 100, 20)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("5")
region = Rect2(161, 20, 98, 1)

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(284, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [129.0]
}

[sub_resource type="Animation" id="4"]
resource_name = "pop_up"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(284, 0), Vector2(153, 0), Vector2(153, 0), Vector2(284, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [129.0, 129.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Get")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqy6b"]
_data = {
"RESET": SubResource("3"),
"pop_up": SubResource("4")
}

[sub_resource type="StyleBoxTexture" id="16"]
texture = ExtResource("14")
region_rect = Rect2(0, 0, 8, 4)

[sub_resource type="StyleBoxTexture" id="17"]
texture = ExtResource("19")
region_rect = Rect2(0, 0, 8, 4)

[sub_resource type="StyleBoxTexture" id="13"]
texture = ExtResource("20")
region_rect = Rect2(0, 0, 8, 4)

[sub_resource type="StyleBoxTexture" id="18"]
texture = ExtResource("16")
region_rect = Rect2(0, 0, 8, 4)

[sub_resource type="StyleBoxTexture" id="19"]
texture = ExtResource("17")
region_rect = Rect2(0, 0, 4, 8)

[sub_resource type="StyleBoxTexture" id="14"]
texture = ExtResource("18")
region_rect = Rect2(0, 0, 4, 8)

[sub_resource type="StyleBoxTexture" id="15"]
texture = ExtResource("21")
region_rect = Rect2(0, 0, 4, 8)

[sub_resource type="StyleBoxTexture" id="20"]
texture = ExtResource("15")
region_rect = Rect2(0, 0, 4, 8)

[sub_resource type="StyleBoxTexture" id="21"]
texture = ExtResource("15")
region_rect = Rect2(0, 0, 4, 8)

[sub_resource type="Theme" id="22"]
HScrollBar/styles/grabber = SubResource("16")
HScrollBar/styles/grabber_highlight = SubResource("17")
HScrollBar/styles/grabber_pressed = SubResource("13")
HScrollBar/styles/scroll = SubResource("18")
VScrollBar/styles/grabber = SubResource("19")
VScrollBar/styles/grabber_highlight = SubResource("14")
VScrollBar/styles/grabber_pressed = SubResource("15")
VScrollBar/styles/scroll = SubResource("20")
VSlider/styles/slider = SubResource("21")

[sub_resource type="Animation" id="Animation_m4cg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_usulq"]
resource_name = "pulse"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yn22e"]
_data = {
"RESET": SubResource("Animation_m4cg7"),
"pulse": SubResource("Animation_usulq")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igmsx"]

[node name="GlobalGUI" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("8")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("22")
expand_mode = 1

[node name="Achievement" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 131.0
offset_bottom = 20.0
grow_horizontal = 0
theme = ExtResource("3_m7phy")
theme_override_styles/panel = SubResource("1")

[node name="Icon" type="TextureRect" parent="Achievement"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = 17.0
texture = ExtResource("9")
stretch_mode = 3

[node name="Text" type="Label" parent="Achievement"]
layout_mode = 0
offset_left = 19.0
offset_top = 2.0
offset_right = 130.0
offset_bottom = 16.0
text = "Destroyer of worlds"
clip_text = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="Achievement"]
layout_mode = 0
offset_left = 1.0
offset_top = 18.0
offset_right = 130.0
offset_bottom = 19.0
max_value = 129.0
value = 129.0
nine_patch_stretch = true
stretch_margin_left = 14
stretch_margin_right = 14
texture_progress = SubResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Achievement"]
libraries = {
"": SubResource("AnimationLibrary_dqy6b")
}

[node name="Get" type="AudioStreamPlayer" parent="Achievement"]
stream = ExtResource("3")

[node name="AchievementMenu" type="TextureRect" parent="."]
process_mode = 3
visible = false
offset_right = 284.0
offset_bottom = 160.0
theme = ExtResource("27_sm2y7")
texture = ExtResource("4")

[node name="Front" type="TextureRect" parent="AchievementMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("7")
stretch_mode = 4

[node name="ScrollContainer" type="ScrollContainer" parent="AchievementMenu"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -48.0
offset_right = 89.0
offset_bottom = 48.0
theme = SubResource("22")
scroll_horizontal = 67

[node name="AchHold" type="Control" parent="AchievementMenu/ScrollContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="LineHold" type="Control" parent="AchievementMenu/ScrollContainer/AchHold"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OneSmallStep" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 142.0
offset_top = 8.0
offset_right = 158.0
offset_bottom = 24.0

[node name="TheMechanic" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 142.0
offset_top = 32.0
offset_right = 158.0
offset_bottom = 48.0
id = "The mechanic"

[node name="Interplanetary" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 142.0
offset_top = 56.0
offset_right = 158.0
offset_bottom = 72.0
id = "Interplanetary"

[node name="Interstellar" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 126.0
offset_top = 80.0
offset_right = 142.0
offset_bottom = 96.0
id = "Interstellar"

[node name="Explorer1" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 158.0
offset_top = 80.0
offset_right = 174.0
offset_bottom = 96.0
id = "Explorer 1"

[node name="Explorer2" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 158.0
offset_top = 104.0
offset_right = 174.0
offset_bottom = 120.0
id = "Explorer 2"

[node name="Explorer3" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 158.0
offset_top = 128.0
offset_right = 174.0
offset_bottom = 144.0
id = "Explorer 3"

[node name="AnUpgrade" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 118.0
offset_top = 32.0
offset_right = 134.0
offset_bottom = 48.0
id = "An upgrade"

[node name="TopOfTheLine" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 32.0
offset_right = 110.0
offset_bottom = 48.0
id = "Top of the line"

[node name="ReadyForBattle" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 166.0
offset_top = 32.0
offset_right = 182.0
offset_bottom = 48.0
id = "Ready for battle"

[node name="WinterReady" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 56.0
offset_right = 110.0
offset_bottom = 72.0
id = "Winter ready"

[node name="IntoIce" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 80.0
offset_right = 110.0
offset_bottom = 96.0
id = "Into ice"

[node name="ScorchedReady" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 104.0
offset_right = 110.0
offset_bottom = 120.0
id = "Scorched ready"

[node name="IntoLava" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 128.0
offset_right = 110.0
offset_bottom = 144.0
id = "Into lava"

[node name="LocationNeeded" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 152.0
offset_right = 110.0
offset_bottom = 168.0
id = "Location needed"

[node name="TheEndgame" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 176.0
offset_right = 110.0
offset_bottom = 192.0
id = "The endgame"

[node name="TheEnd" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 94.0
offset_top = 200.0
offset_right = 110.0
offset_bottom = 216.0
id = "The end"

[node name="Exterminator1" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 190.0
offset_top = 32.0
offset_right = 206.0
offset_bottom = 48.0
id = "Exterminator 1"

[node name="Exterminator2" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 190.0
offset_top = 56.0
offset_right = 206.0
offset_bottom = 72.0
id = "Exterminator 2"

[node name="Exterminator3" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 190.0
offset_top = 80.0
offset_right = 206.0
offset_bottom = 96.0
id = "Exterminator 3"

[node name="DestroyerOfWorlds" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 190.0
offset_top = 104.0
offset_right = 206.0
offset_bottom = 120.0
id = "Destroyer of worlds"

[node name="Economist1" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 214.0
offset_top = 8.0
offset_right = 230.0
offset_bottom = 24.0
id = "Economist 1"

[node name="Economist2" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 214.0
offset_top = 32.0
offset_right = 230.0
offset_bottom = 48.0
id = "Economist 2"

[node name="Economist3" parent="AchievementMenu/ScrollContainer/AchHold" instance=ExtResource("20_7t6a1")]
layout_mode = 0
offset_left = 214.0
offset_top = 56.0
offset_right = 230.0
offset_bottom = 72.0
id = "Economist 3"

[node name="Desc" type="TextureRect" parent="AchievementMenu"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -80.0
offset_right = 142.0
offset_bottom = 80.0
mouse_filter = 0
texture = ExtResource("23")

[node name="Title" type="Label" parent="AchievementMenu/Desc"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -47.0
offset_right = 88.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
text = "One small step"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="AchievementMenu/Desc"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -29.0
offset_right = 87.0
offset_bottom = 48.0
text = "One small step"
autowrap_mode = 3

[node name="BackBtn" type="Button" parent="AchievementMenu"]
layout_mode = 0
offset_left = 100.0
offset_top = 129.0
offset_right = 184.0
offset_bottom = 145.0
text = "Back"

[node name="Title" type="Label" parent="AchievementMenu"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 15.0
offset_right = 41.0
offset_bottom = 31.0
text = "Achievements"
horizontal_alignment = 1

[node name="AutoSaveTimer" type="Timer" parent="."]

[node name="AutosaveIcon" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -21.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("26_hyk7n")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AutosaveIcon"]
libraries = {
"": SubResource("AnimationLibrary_yn22e")
}

[node name="TutorialPopup" type="Panel" parent="."]
visible = false
offset_right = 94.0
offset_bottom = 121.0
theme = ExtResource("27_sm2y7")
script = ExtResource("28_r5hjh")

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2
text = "Tutorial Popup"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Icon" type="TextureRect" parent="TutorialPopup/VBoxContainer"]
visible = false
layout_mode = 2
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="TutorialPopup/VBoxContainer"]
modulate = Color(0.156863, 0.360784, 0.768627, 1)
layout_mode = 2

[node name="Content" type="RichTextLabel" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_igmsx")
text = "Welcome to Tiny Pixel Planets! These tutorial popups will help you progress through the game. You can find all tutorials by pressing \"esc\"."
visible_characters_behavior = 1

[node name="OkBtn" type="Button" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2
text = "Ok!"

[node name="ShowTimer" type="Timer" parent="TutorialPopup"]

[node name="TextTimer" type="Timer" parent="TutorialPopup"]
one_shot = true

[connection signal="pressed" from="AchievementMenu/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_auto_save_timer_timeout"]
[connection signal="pressed" from="TutorialPopup/VBoxContainer/OkBtn" to="TutorialPopup" method="_on_ok_btn_pressed"]
[connection signal="timeout" from="TutorialPopup/ShowTimer" to="TutorialPopup" method="_on_show_timer_timeout"]
[connection signal="timeout" from="TutorialPopup/TextTimer" to="TutorialPopup" method="_on_text_timer_timeout"]
